html file modified.
Signed-off-by: inderjit-github <inderjit.github@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h3>Welcome to my live website on GitHub</h3>
-  <p>Wow! it really worlks.</p>
+  <p>Wow! it really worlks and i love to code. </p>
 </body>
 </html>
